Add OAuth2 support for authentication with Solace PubSub+ Broker