@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.solace.spring.boot</groupId>
         <artifactId>solace-spring-boot-build</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>solace-spring-boot-parent</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Solace Spring Boot Parent</name>
@@ -24,29 +24,18 @@
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
 
-        <solace.spring.boot.java-autoconf.version>5.0.1-SNAPSHOT</solace.spring.boot.java-autoconf.version>
-        <solace.spring.boot.jms-autoconf.version>5.0.1-SNAPSHOT</solace.spring.boot.jms-autoconf.version>
+        <solace.spring.boot.java-autoconf.version>5.1.0-SNAPSHOT</solace.spring.boot.java-autoconf.version>
+        <solace.spring.boot.jms-autoconf.version>5.1.0-SNAPSHOT</solace.spring.boot.jms-autoconf.version>
 
-        <solace.jcsmp.version>10.20.0</solace.jcsmp.version>
-        <solace.jms-jakarta.version>10.20.0</solace.jms-jakarta.version>
+        <solace.jcsmp.version>10.22.0</solace.jcsmp.version>
+        <solace.jms-jakarta.version>10.22.0</solace.jms-jakarta.version>
 
-        <surefire.plugin.version>2.12.4</surefire.plugin.version> <!-- Can upgrade after updating tests to JUnit 5 -->
+        <surefire.plugin.version>2.22.2</surefire.plugin.version>
+        <failsafe.plugin.version>2.22.2</failsafe.plugin.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <!--
-			Workaround for CVE-2021-45046
-			Remove after upgrading to Spring Boot >= 2.6.3
-			 -->
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-bom</artifactId>
-                <version>2.19.0</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
             <dependency>
                 <!-- Import Spring Boot dependency management -->
                 <groupId>org.springframework.boot</groupId>
@@ -73,15 +62,47 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${surefire.plugin.version}</version>
                     <configuration>
                         <argLine>
                             --add-opens java.base/java.lang=ALL-UNNAMED
                             --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.net=ALL-UNNAMED
                         </argLine>
+                        <properties>
+                            <configurationParameters>
+                                junit.jupiter.execution.parallel.enabled=false
+                            </configurationParameters>
+                        </properties>
                     </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>${failsafe.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>integration-test</id>
+                            <goals>
+                                <goal>integration-test</goal>
+                                <goal>verify</goal>
+                            </goals>
+                            <configuration>
+                                <argLine>
+                                    --add-opens java.base/java.lang=ALL-UNNAMED
+                                    --add-opens java.base/java.util=ALL-UNNAMED
+                                    --add-opens java.base/java.net=ALL-UNNAMED
+                                </argLine>
+                                <properties>
+                                    <configurationParameters>
+                                        junit.jupiter.execution.parallel.enabled=false
+                                    </configurationParameters>
+                                </properties>
+                            </configuration>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
